--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">16 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>How to control emotions while trading...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Journey from Finite to Infinite</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Harnessing Nature to Quiet Mental Chatter | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Sadhguru Takes A Stroll in New York</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>This country has abandoned poor people</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Tax wealth not work to save the UK</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -642,7 +642,7 @@
                     <div class="video-info">
                         <h3>Can You Guess What He's Thinking?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1755,7 +1755,7 @@
                     <div class="video-info">
                         <h3>Trading Strategies: Stop, Reverse, and Profit Targets #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>How to control emotions while trading...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>This country has abandoned poor people</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>Tax wealth not work to save the UK</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -6264,7 +6264,7 @@
                         <div class="video-info">
                             <h3>Trading Strategies: Stop, Reverse, and Profit Targets #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">16 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Journey from Finite to Infinite</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Harnessing Nature to Quiet Mental Chatter | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7953,7 +7953,7 @@
                         <div class="video-info">
                             <h3>Sadhguru Takes A Stroll in New York</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10353,7 +10353,7 @@
                         <div class="video-info">
                             <h3>Can You Guess What He's Thinking?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
