--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>I am Trading for 10 Years and this is what I would tell every struggeling Trader</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Pretty Good Oscillator (PGO) by Mark Johnson</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>How to control emotions while trading...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>A Simple Practice for Clarity & Success | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>If You Want Your Child to Blossom… | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>BIGGER.. BIGGER.. The Beast Pizza is here!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Harnessing Nature to Quiet Mental Chatter | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Sadhguru Takes A Stroll in New York</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>This country has abandoned poor people</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -642,7 +642,7 @@
                     <div class="video-info">
                         <h3>These Reddit Recipes are Horrible</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -862,7 +862,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Coaching - Here Are The Best In The Business</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2481,7 +2481,7 @@
                     <div class="video-info">
                         <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>I am Trading for 10 Years and this is what I would tell every struggeling Trader</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Pretty Good Oscillator (PGO) by Mark Johnson</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>How to control emotions while trading...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>This country has abandoned poor people</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5954,7 +5954,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Coaching - Here Are The Best In The Business</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>A Simple Practice for Clarity & Success | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>If You Want Your Child to Blossom… | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Harnessing Nature to Quiet Mental Chatter | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7953,7 +7953,7 @@
                         <div class="video-info">
                             <h3>Sadhguru Takes A Stroll in New York</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>BIGGER.. BIGGER.. The Beast Pizza is here!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9648,7 +9648,7 @@
                         <div class="video-info">
                             <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10342,7 +10342,7 @@
                         <div class="video-info">
                             <h3>These Reddit Recipes are Horrible</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
