--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">11 minutes ago</div>
+                        <div class="date">33 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Wheat Dueling Momentum 🌾🏆 |  Strategy of the Month #50! | December 2025</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">29 minutes ago</div>
+                        <div class="date">52 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>I am Trading for 10 Years and this is what I would tell every struggeling Trader</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>A Simple Practice for Clarity & Success | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>BIGGER.. BIGGER.. The Beast Pizza is here!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Sadhguru Takes A Stroll in New York</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>"It's Not a Rapper Bro"💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">11 minutes ago</div>
+                            <div class="date">33 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Wheat Dueling Momentum 🌾🏆 |  Strategy of the Month #50! | December 2025</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">29 minutes ago</div>
+                            <div class="date">52 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>I am Trading for 10 Years and this is what I would tell every struggeling Trader</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>A Simple Practice for Clarity & Success | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7964,7 +7964,7 @@
                         <div class="video-info">
                             <h3>Sadhguru Takes A Stroll in New York</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>BIGGER.. BIGGER.. The Beast Pizza is here!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10298,7 +10298,7 @@
                         <div class="video-info">
                             <h3>"It's Not a Rapper Bro"💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
