--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GTA BUT THE CAR GETS FASTER EVERY LAP</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">16 minutes ago</div>
+                        <div class="date">42 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - My EP ‘Missed Again’ out now!! This song is on it!!! #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Impact of Early Sexual Exposure | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>How to control emotions while trading...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Journey from Finite to Infinite</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="video-info">
                         <h3>Try not to Cringe: MILLENNIALS</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -697,7 +697,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: MEN</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -895,7 +895,7 @@
                     <div class="video-info">
                         <h3>Best Pizza Concept⎮Now You Can Partnership With Me</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1018,7 +1018,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: Renaissance Fair Cringe</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5798,7 +5798,7 @@
                         <div class="video-info">
                             <h3>How to control emotions while trading...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Impact of Early Sexual Exposure | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Journey from Finite to Infinite</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9439,7 +9439,7 @@
                         <div class="video-info">
                             <h3>Best Pizza Concept⎮Now You Can Partnership With Me</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GTA BUT THE CAR GETS FASTER EVERY LAP</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">16 minutes ago</div>
+                            <div class="date">42 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - My EP ‘Missed Again’ out now!! This song is on it!!! #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10320,7 +10320,7 @@
                         <div class="video-info">
                             <h3>Try not to Cringe: MILLENNIALS</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10375,7 +10375,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: MEN</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10463,7 +10463,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: Renaissance Fair Cringe</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
